url-service/infra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: url
    version: "1.0"
  name: url
spec:
  replicas: 1
  selector:
    matchLabels:
      app: url
  strategy:
    rollingUpdate:
      maxSurge: 34%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: url
    spec:
      containers:
        - name: url
          image: url-service:1
          imagePullPolicy: Never
          livenessProbe:
            httpGet:
              path: /actuator/info
              port: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
