url-service/infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: url
  name: url
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
      name: http
  selector:
    app: url
  type: NodePort
