url-service/infra/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: url
spec:
  hosts:
  - "*"
  http:
  - match:
    - uri:
      prefix: /url/create
    - uri:
      prefix: /url/del
    route:
      - destination:
          port:
            number: 80
          host: url.default.svc.cluster.local
  gateways:
  - microservice-gateway
